--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -13,7 +13,7 @@
   margin-bottom: 0;
   padding-left: 2em;
   padding-right: 2em;
-  font-family: $sans-serif;
+  font-family: $bodoni;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.30s;
@@ -66,7 +66,7 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    font-family: $sans-serif;
+    font-family: $bodoni;
   }
 
   li {
@@ -77,8 +77,8 @@
     a {
       margin-bottom: 0.25em;
       padding: 0.5em 1em;
-      font-family: $sans-serif;
-      font-size: 14px;
+      font-family: $bodoni;
+      font-size: 18px;
       font-weight: bold;
       line-height: 1.5;
       text-align: center;
@@ -126,7 +126,7 @@
     padding: 1em 2em;
     float: left;
     width: 50%;
-    font-family: $sans-serif;
+    font-family: $bodoni;
     font-size: $type-size-5;
     font-weight: bold;
     text-align: center;
@@ -314,7 +314,7 @@
    ========================================================================== */
 
 .nav__list {
-  font-size: 1.25rem;
+  font-size: 2rem;
 
   ul {
     margin-bottom: 1em;
@@ -348,8 +348,8 @@
 .nav__title {
   margin: 0;
   padding: 0.5rem 1rem;
-  font-family: $sans-serif-narrow;
-  font-size: $type-size-5;
+  font-family: $bodoni;
+  font-size: $type-size-3;
   font-weight: bold;
 }
 
@@ -357,7 +357,7 @@
   display: block;
   margin: 0.5rem 0;
   padding: 0.5rem 0;
-  font-family: $sans-serif-narrow;
+  font-family: $bodoni;
   font-size: $type-size-6;
   font-weight: bold;
   text-transform: uppercase;
@@ -370,7 +370,7 @@
    ========================================================================== */
 
 .toc {
-  font-family: $sans-serif-narrow;
+  font-family: $bodoni;
   color: $gray;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -381,7 +381,7 @@
 
   .nav__title {
     color: #fff;
-    font-size: $type-size-6;
+    font-size: $type-size-3;
     background: $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
@@ -393,7 +393,7 @@
   padding: 0;
   width: 100%;
   list-style: none;
-  font-size: 0.8rem;
+  font-size: 1rem;
 
   a {
     display: block;
