--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -31,7 +31,7 @@
 
   h2, h3, h4, h5, h6 {
     margin-bottom: 0;
-    font-family: $sans-serif-narrow;
+    font-family: $bodoni;
   }
 
   h3, h4 {
@@ -39,7 +39,7 @@
   }
 
   p, li {
-    font-family: $sans-serif;
+    font-family: $bodoni;
     font-size: $type-size-6;
     line-height: 1.5;
   }
@@ -117,8 +117,8 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-family: $bodoni;
+  font-size: $type-size-3;
 }
 
 .author__bio {
@@ -134,7 +134,7 @@
   position: relative;
   display: table-cell;
   vertical-align: middle;
-  font-family: $sans-serif;
+  font-family: $bodoni;
   z-index: 10;
   position: relative;
   cursor: pointer;
