--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,9 +28,9 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : $sans-serif;
-$header-font-family         : $sans-serif;
-$caption-font-family        : $serif;
+$global-font-family         : $calisto;
+$header-font-family         : $bodoni;
+$caption-font-family        : $calisto;
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
@@ -64,7 +64,7 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #1B2E67;
 
 /* brands */
 $behance-color              : #1769FF;
