--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,8 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #1B2E67;
+$info-color                 : #2785c9;
+$my-color1                  : #00659C;
 
 /* brands */
 $behance-color              : #1769FF;
@@ -91,7 +92,7 @@ $xing-color                 : #006567;
 
 /* links */
 $link-color                 : $info-color;
-$link-color-hover           : mix(#000, $link-color, 25%);
+$link-color-hover           : $my-color1;
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
