--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -77,6 +77,7 @@
 
     &:hover {
       text-decoration: underline;
+	  color: $link-color-hover;
 
       img {
         box-shadow: 0 0 10px rgba(#000, 0.25);
